--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -14,6 +15,7 @@
         "connect-flash": "^0.1.1",
         "connect-mongo": "^5.0.0",
         "cookie-parser": "^1.4.6",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-handlebars": "^7.0.7",
         "express-session": "^1.17.3",
