Tercera pre entrega finalizada

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ mongodb=mongodb+srv://mateoivanovich43:mateo@cluster0.c6wntnx.mongodb.net/?retry
 dbname=ecommerce
 
 secretKey=mi_clave_secreta
+
+nodemailerKey= cniexzywddqejrns
