--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@faker-js/faker": "^8.0.2",
         "bcrypt": "^5.1.0",
         "connect-flash": "^0.1.1",
         "connect-mongo": "^5.0.0",
         "cookie-parser": "^1.4.6",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "express-compression": "^1.0.2",
         "express-handlebars": "^7.0.7",
         "express-session": "^1.17.3",
         "handlebars": "^4.7.7",
