--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "@faker-js/faker": "^8.0.2",
+        "artillery": "^2.0.0-35",
         "bcrypt": "^5.1.0",
         "connect-flash": "^0.1.1",
         "connect-mongo": "^5.0.0",
@@ -31,6 +32,7 @@
         "passport-github2": "^0.1.12",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
-        "socket.io": "^4.6.1"
+        "socket.io": "^4.6.1",
+        "winston": "^3.10.0"
     }
 }
