--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
     "name": "desafio1ivanovich",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "src/app.js",
     "type": "module",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node src/app.js",
+        "dev": "nodemon src/app.js",
+        "test": "mocha test/**/*.test.js"
     },
     "keywords": [],
     "author": "",
@@ -33,8 +35,14 @@
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
         "socket.io": "^4.6.1",
+        "supertest": "^6.3.3",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.0",
         "winston": "^3.10.0"
+    },
+    "devDependencies": {
+        "chai": "^4.3.8",
+        "mocha": "^10.2.0",
+        "supertest-session": "^5.0.1"
     }
 }
