--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "desafio1ivanovich",
     "version": "1.0.0",
     "description": "",
-    "main": "src/app.js",
+    "main": "app.js",
     "type": "module",
     "scripts": {
         "start": "node src/app.js",
@@ -14,7 +14,7 @@
     "license": "ISC",
     "dependencies": {
         "@faker-js/faker": "^8.0.2",
-        "artillery": "^2.0.0-35",
+        "artillery": "^1.7.9",
         "bcrypt": "^5.1.0",
         "connect-flash": "^0.1.1",
         "connect-mongo": "^5.0.0",
@@ -36,6 +36,7 @@
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
         "socket.io": "^4.6.1",
+        "stripe": "^13.6.0",
         "supertest": "^6.3.3",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.0",
