--- a/src/docs/products/products.yaml
+++ b/src/docs/products/products.yaml
@@ -13,6 +13,7 @@ paths:
                 type: array
         "500": 
           description: Error interno del servidor
+  /api/products/createProduct:
     post:
       summary: Crea un producto
       tags: 
@@ -32,7 +33,6 @@ paths:
                 type: array
         "500": 
           description: Error interno del servidor
-
   /api/products/{pid}:
     put:
       summary: Actualiza el producto
@@ -54,6 +54,7 @@ paths:
           description: Producto actualizado correctamente
         "500":
           description: Error interno del servidor
+  
     delete:
       summary: Elimina el producto 
       tags:
